--- a/css/androcustom.css
+++ b/css/androcustom.css
@@ -8,15 +8,11 @@ body {
 }
 .jumbotron {
 	text-align: center;
-	padding-top: 70px;
-  padding-bottom: 52px;
+	
+  width: 100%;
+  height: 100%;
   margin-top: 40px;
-
-    background-image:url('../images/divider3.jpg');
-    width: 100%;
-    height: 100%;
-
-    color: white;
+  background-image:url('../images/divider3.jpg'); color: white;
   }
   .jumbotron h1 {
   	font-family: 'Oswald', sans-serif;
